libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/newtype-4.jsonc
//@ run: fail
//@ description: newtype/4 should error out
[
  "::kernel::special_form::newtype",
  "x",
  "Boolean",
  ["+", { "#literal": true }, { "#literal": false }],
  { "#literal": true }
  //~^ ERROR unexpected argument
]
